tools: copilot: fix bug where zooming too much make keyboard appears

--- a/cogip/tools/copilot/static/css/index.css
+++ b/cogip/tools/copilot/static/css/index.css
@@ -208,7 +208,7 @@ input[type='checkbox']:checked {
 }
 
 .keyboard--hidden {
-  bottom: -100%;
+  bottom: -200%;
 }
 
 .keyboard__keys {
